log/build_2026-01-28_17-38-28/perception_pkg/stderr.log
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp: In member function ‘void perception_pkg::LaneMarkingNode::compressedCallback(sensor_msgs::msg::CompressedImage_<std::allocator<void> >::SharedPtr)’:
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp:93:29: error: ‘imdecode’ is not a member of ‘cv’
   93 |         cv::Mat frame = cv::imdecode(cv::Mat(msg->data), cv::IMREAD_COLOR);
      |                             ^~~~~~~~
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp:93:62: error: ‘IMREAD_COLOR’ is not a member of ‘cv’
   93 |         cv::Mat frame = cv::imdecode(cv::Mat(msg->data), cv::IMREAD_COLOR);
      |                                                              ^~~~~~~~~~~~
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_tracking_node.cpp: In member function ‘void perception_pkg::LaneTrackingNode::compressedCallback(sensor_msgs::msg::CompressedImage_<std::allocator<void> >::SharedPtr)’:
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_tracking_node.cpp:68:29: error: ‘imdecode’ is not a member of ‘cv’
   68 |         cv::Mat frame = cv::imdecode(cv::Mat(msg->data), cv::IMREAD_COLOR);
      |                             ^~~~~~~~
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_tracking_node.cpp:68:62: error: ‘IMREAD_COLOR’ is not a member of ‘cv’
   68 |         cv::Mat frame = cv::imdecode(cv::Mat(msg->data), cv::IMREAD_COLOR);
      |                                                              ^~~~~~~~~~~~
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp: In member function ‘perception_pkg::LineStyle perception_pkg::LaneMarkingNode::estimateStyle(const cv::Mat&, const std::vector<int>&, const std::vector<int>&)’:
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp:249:66: warning: unused parameter ‘ys’ [-Wunused-parameter]
  249 |                                          const std::vector<int>& ys) {
      |                                          ~~~~~~~~~~~~~~~~~~~~~~~~^~
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp: In member function ‘perception_pkg::StopLine perception_pkg::LaneMarkingNode::detectStopLine(const cv::Mat&, int)’:
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp:268:9: warning: unused variable ‘w’ [-Wunused-variable]
  268 |     int w = frame.cols;
      |         ^
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp:266:68: warning: unused parameter ‘roi_y’ [-Wunused-parameter]
  266 | StopLine LaneMarkingNode::detectStopLine(const cv::Mat& frame, int roi_y) {
      |                                                                ~~~~^~~~~
gmake[2]: *** [CMakeFiles/lane_tracking_node.dir/build.make:76: CMakeFiles/lane_tracking_node.dir/src/lane_tracking_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:195: CMakeFiles/lane_tracking_node.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
gmake[2]: *** [CMakeFiles/lane_marking_node.dir/build.make:76: CMakeFiles/lane_marking_node.dir/src/lane_marking_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:169: CMakeFiles/lane_marking_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
